# jdass

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.streamlit/: config.toml
automation/: application_runner.py  base_handler.py  greenhouse_handler.py  lever_handler.py  linkedin_handler.py  rate_limiter.py
configs/: applicant.example.yaml  form_answers.example.yaml  settings.yaml  sources.yaml
core/: deduplicator.py  filters.py  form_answers.py  jd_parser.py  message_generator.py  notifier.py  recruiter_finder.py  resume_tailor.py  scorer.py
dashboard/: api.py  ui.py
llm/: client.py
llm/prompts/: form_field.txt  jd_parse.txt  outreach_message.txt  resume_bullets.txt
pipelines/: __main__.py  application.py  discovery.py  outreach.py  parse_jobs.py
scheduler/: scheduler.py
scrapers/: __init__.py  base.py  greenhouse.py  hn_hiring.py  lever.py  wellfound.py
storage/: database.py  file_store.py  models.py
tests/: test_automation.py  test_deduplicator.py  test_filters.py  test_jd_parser.py  test_outreach.py  test_scorer.py
